--- a/aoc-2022-csharp.csproj
+++ b/aoc-2022-csharp.csproj
@@ -20,6 +20,12 @@
       <None Update="Day01\Day01.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
+      <None Update="Day02\Day02.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Day02\Day02-test.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>    
 
 </Project>
