--- a/aoc-2022-csharp.csproj
+++ b/aoc-2022-csharp.csproj
@@ -26,6 +26,12 @@
       <None Update="Day02\Day02-test.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day03\Day03-test.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Day03\Day03input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>    
 
 </Project>
