--- a/aoc-2022-csharp.csproj
+++ b/aoc-2022-csharp.csproj
@@ -32,6 +32,9 @@
       <None Update="Day03\Day03input.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Day04\day04input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>    
 
 </Project>
